Other:firstpage-visibility - corrects how first page is hidden and second page displayed on start test button click

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ p {
     color: #ffffff;
 }
 /*Questions section*/
-#question1, .question2, .question3, .question4, .question5 {
+.question1, .question2, .question3, .question4, .question5 {
     padding: 2em 4em;
     line-height: 3em;
     border: 1.5px solid grey;
@@ -61,5 +61,9 @@ p {
     border: none;
     border-radius: 2px;
     cursor: pointer;
+}
+
+#container-2 {
+    display: none;
 }
 
